website/src/css/custom.css
/* ... */
.menu__link--active {
  color: var(--ifm-menu-color);
  font-weight: 600;
}
.menu__link:hover,
.menu__link--active:hover {
  color: var(--prysm-pink);
}
.table-of-contents > li {
  font-size: 17px;
  color: #22292f;
}
.table-of-contents__link:hover {
  color: var(--prysm-pink);
}
.toc .toggleNav ul li a:hover {
  color: var(--prysm-pink);
}
.toc .toggleNav ul li.navListItemActive a {
  color: white;
  font-weight: 600;
}
header > h1 {
  font-size: 2rem !important;
  margin-top: 20px !important;
  margin-bottom: 60px !important;
}
.header-badges {
  display: block;
  margin-top: -50px !important;
  margin-bottom: 15px;
  min-height: 35px;
  /*pragmatism over perfection*/
}
.header-badges .header-badge {
  transition-property: all;
  transition-duration: 0.2s;
  display: inline-block;
  border-radius: 20px;
  background-color: #efefef;
  padding: 3px 20px 3px 3px;
  height: 31px;
  margin-right: 6px;
  margin-bottom: 5px;
  vertical-align: top;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 100%;
}
.header-badges .header-badge:hover {
  text-decoration: none;
  background-color: #e6e6e6;
  opacity: 1;
}
.header-badges .header-badge:hover .badge-avatar {
  opacity: 1;
}
.header-badges .header-badge:hover .badge-label {
  color: #000;
}
.header-badges .header-badge .badge-label {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  transition-property: all;
  transition-duration: 0.2s;
  font-size: 13px;
  line-height: 24px;
  color: #333;
  display: inline-block;
  vertical-align: top;
  height: 25px;
  max-width: calc(100% - 33px);
}
.header-badges .header-badge .badge-avatar {
  transition-property: all;
  transition-duration: 0.2s;
  display: inline-block;
  border-radius: 30px;
  width: 25px;
  height: 25px;
  background-size: cover;
  margin-right: 12px;
  font-size: 12px;
  vertical-align: top;
  line-height: 23px;
  padding-left: 8px;
  opacity: 0.7;
}
.header-badges .header-badge .emoji-avatar {
  margin-right: 8px !important;
}
.margin-vert--md {
  margin: 0 !important;
}
.checklist .task {
  display: table;
  position: relative;
  margin-bottom: 5px;
  border-radius: 5px;
  padding: 10px;
  overflow: hidden;
  width: 100%;
}
.checklist .task .input-container {
  display: table-cell;
  vertical-align: middle;
  padding: 10px 5px;
  width: 40px;
}
.checklist .task .input-container input {
  width: 25px;
  height: 25px;
  display: inline-block;
  position: relative;
  z-index: 2;
  cursor: pointer;
}
.checklist .task .input-container .done {
  transition-property: background-color;
  transition-duration: 0.2s;
  transition-delay: 0s;
}
.checklist .task .input-container input:checked + .done {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #dfebfd;
  z-index: 0;
}
.checklist .task .guidance-container {
  display: inline-block;
  padding-top: 0px;
  position: relative;
  z-index: 2;
  padding-left: 10px;
}
.checklist .task .guidance-container label {
  display: block;
  font-weight: bold;
}
.checklist .task .guidance-container > p,
.checklist .task .guidance-container p,
.checklist .task .guidance-container > div {
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 0 !important;
}
.checklist .task .guidance-container > p .margin-top--md,
.checklist .task .guidance-container p .margin-top--md,
.checklist .task .guidance-container > div .margin-top--md {
  margin-top: 0 !important;
}
.checklist input {
  margin-right: 5px;
}
html[data-theme='dark'] .checklist .task .input-container input:checked + .done {
  background-color: #002862;
}
html[data-theme='dark'] .checklist .task .guidance-container label {
  color: white;
}
html[data-theme='dark'] .checklist .task .guidance-container > p {
  color: white;
}
html[data-theme='dark'] .header-badge {
  background-color: #333;
}
html[data-theme='dark'] .header-badge:hover {
  background-color: #444;
}
html[data-theme='dark'] .header-badge:hover .badge-label {
  color: #d6d6d6;
}
html[data-theme='dark'] .header-badge .badge-label {
  color: #ddd;
}
.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
@media (max-width: 736px) {
  .nav-footer {
    text-align: center;
    margin: auto;
  }
  .nav-home {
    margin: auto !important;
  }
  .header-badge {
    max-width: 200px;
  }
}
@media (max-width: 600px) {
  .quickstart-tabs .tabgroup-with-label .tabs__item {
    padding: 5px 10px !important;
    line-height: 27px;
  }
  .quickstart-tabs .tabgroup-with-label .tabs__item:first-child {
    display: none !important;
  }
}

.nav-footer {
  background: #20232a;
  border: none;
  color: #202020;
  font-size: 15px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  line-height: 24px;
  padding-bottom: 2em;
  padding-top: 2em;
  position: relative;
}

.nav-footer .sitemap {
  display: flex;
  justify-content: space-between;
  margin: 0 auto 3em;
  max-width: 1080px;
}

.nav-footer .sitemap div {
  flex: 1;
}

.nav-footer .sitemap h5, .nav-footer .sitemap h5>a, .nav-footer .sitemap h6, .nav-footer .sitemap h6>a {
  color: #fff;
}

.nav-footer .sitemap a {
  color: hsla(0, 0%, 100%, .6);
  display: block;
  margin: 2px 0;
  padding: 3px 0;
}

.nav-footer .sitemap a:hover  {
  color: #50a0ea;
  text-decoration: none;
}

.footerLogo {
  display: flex
;
  margin: 0 auto 3em;
  max-width: 1080px;
}

.nav-footer .copyright {
  color: hsla(0, 0%, 100%, .4);
  text-align: center;
}

